# Copyright (c) 2019 The Presearch Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//presearch/browser/presearch_ads/android/java_sources.gni")
import("//presearch/components/presearch_ads/browser/buildflags/buildflags.gni")
import("//presearch/components/presearch_referrals/buildflags/buildflags.gni")
import("//presearch/components/presearch_rewards/browser/buildflags/buildflags.gni")
import("//presearch/components/presearch_sync/buildflags/buildflags.gni")
import("//presearch/components/permissions/android/java_sources.gni")
import("//presearch/components/safetynet/java_sources.gni")
import("//components/feed/features.gni")

presearch_java_sources = [
  "../../presearch/android/feed/core/java/src/org/chromium/chrome/browser/feed/PresearchFeedSurfaceCoordinator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchAppHooks.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchBadge.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchFeatureList.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchHelper.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchIntentHandler.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchLaunchIntentDispatcher.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRelaunchUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsBalance.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsDonationSentActivity.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsExternalWallet.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsHelper.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsNativeWorker.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsObserver.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsOnboardingPagerAdapter.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsPanelPopup.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsPublisher.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsSiteBannerActivity.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsUserWalletActivity.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchRewardsVerifyWalletActivity.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchSyncReflectionUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/PresearchUphold.java",
  "../../presearch/android/java/org/chromium/chrome/browser/CrossPromotionalModalDialogFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/DeprecateBAPModalDialogFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/InternetConnection.java",
  "../../presearch/android/java/org/chromium/chrome/browser/QRCodeShareDialogFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/SetDefaultBrowserActivity.java",
  "../../presearch/android/java/org/chromium/chrome/browser/app/PresearchActivity.java",
  "../../presearch/android/java/org/chromium/chrome/browser/app/appmenu/AppMenuIconRowFooter.java",
  "../../presearch/android/java/org/chromium/chrome/browser/app/appmenu/PresearchAppMenuPropertiesDelegateImpl.java",
  "../../presearch/android/java/org/chromium/chrome/browser/appmenu/PresearchTabbedAppMenuPropertiesDelegate.java",
  "../../presearch/android/java/org/chromium/chrome/browser/bookmarks/PresearchBookmarkUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/presearch_stats/PresearchStatsBottomSheetDialogFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/presearch_stats/PresearchStatsUtil.java",
  "../../presearch/android/java/org/chromium/chrome/browser/custom_layout/HeightWrappingViewPager.java",
  "../../presearch/android/java/org/chromium/chrome/browser/custom_layout/NonSwipeableViewPager.java",
  "../../presearch/android/java/org/chromium/chrome/browser/custom_layout/VerticalViewPager.java",
  "../../presearch/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/ArrowColorDrawable.java",
  "../../presearch/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltip.java",
  "../../presearch/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltipUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/decentralized_dns/settings/ENSSettingsFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupENSResolveMethodPreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupUnstoppableDomainsResolveMethodPreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/decentralized_dns/settings/UnstoppableDomainsSettingsFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/document/PresearchLauncherActivity.java",
  "../../presearch/android/java/org/chromium/chrome/browser/download/PresearchMimeUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/download/settings/PresearchDownloadSettings.java",
  "../../presearch/android/java/org/chromium/chrome/browser/externalnav/PresearchExternalNavigationHandler.java",
  "../../presearch/android/java/org/chromium/chrome/browser/feedback/PresearchHelpAndFeedbackLauncherImpl.java",
  "../../presearch/android/java/org/chromium/chrome/browser/help/PresearchHelpAndFeedbackLauncher.java",
  "../../presearch/android/java/org/chromium/chrome/browser/homepage/PresearchHomepageManager.java",
  "../../presearch/android/java/org/chromium/chrome/browser/homepage/settings/PresearchHomepageSettings.java",
  "../../presearch/android/java/org/chromium/chrome/browser/informers/PresearchAndroidSyncDisabledInformer.java",
  "../../presearch/android/java/org/chromium/chrome/browser/language/settings/PresearchLanguageSettings.java",
  "../../presearch/android/java/org/chromium/chrome/browser/local_database/PresearchStatsTable.java",
  "../../presearch/android/java/org/chromium/chrome/browser/local_database/DatabaseHelper.java",
  "../../presearch/android/java/org/chromium/chrome/browser/local_database/SavedBandwidthTable.java",
  "../../presearch/android/java/org/chromium/chrome/browser/local_database/TopSiteTable.java",
  "../../presearch/android/java/org/chromium/chrome/browser/night_mode/settings/PresearchRadioButtonGroupThemePreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/night_mode/settings/PresearchThemePreferences.java",
  "../../presearch/android/java/org/chromium/chrome/browser/notifications/PresearchNotificationManagerProxyImpl.java",
  "../../presearch/android/java/org/chromium/chrome/browser/notifications/PresearchNotificationPlatformBridge.java",
  "../../presearch/android/java/org/chromium/chrome/browser/notifications/PresearchNotificationSettingsBridge.java",
  "../../presearch/android/java/org/chromium/chrome/browser/notifications/PresearchOnboardingNotification.java",
  "../../presearch/android/java/org/chromium/chrome/browser/notifications/PresearchSetDefaultBrowserNotificationService.java",
  "../../presearch/android/java/org/chromium/chrome/browser/notifications/channels/PresearchChannelDefinitions.java",
  "../../presearch/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotification.java",
  "../../presearch/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationPublisher.java",
  "../../presearch/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationUtil.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp/PresearchDuckDuckGoOfferView.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp/PresearchNewTabPage.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp/PresearchNewTabPageLayout.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp/IncognitoNewTabPageView.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetAdapter.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetItem.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetManager.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetStackActivity.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetStackAdapter.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp/widget/SwipeAndDragHelper.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/NTPBackgroundImagesBridge.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/RewardsBottomSheetDialogFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/model/BackgroundImage.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/model/ImageCredit.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/model/NTPImage.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredLogo.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredTab.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/model/TopSite.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/model/Wallpaper.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/util/FetchWallpaperWorkerTask.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/util/NTPUtil.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/util/NewTabPageListener.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ntp_background_images/util/SponsoredImageUtil.java",
  "../../presearch/android/java/org/chromium/chrome/browser/omnibox/suggestions/editurl/PresearchEditUrlSuggestionProcessor.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/PresearchRewardsOnboardingFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/OnViewPagerAction.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/OnboardingActivity.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/OnboardingPrefManager.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/OnboardingViewPagerAdapter.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/P3aOnboardingActivity.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/SearchEngineEnum.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/SearchEngineOnboardingFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/TroubleshootingOnboardingFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightDialogFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightItem.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightView.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2Fragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2PagerAdapter.java",
  "../../presearch/android/java/org/chromium/chrome/browser/partnercustomizations/PresearchPartnerBrowserCustomizations.java",
  "../../presearch/android/java/org/chromium/chrome/browser/partnercustomizations/ClosePresearchManager.java",
  "../../presearch/android/java/org/chromium/chrome/browser/password_manager/settings/PresearchPasswordSettingsBase.java",
  "../../presearch/android/java/org/chromium/chrome/browser/preferences/PresearchPrefServiceBridge.java",
  "../../presearch/android/java/org/chromium/chrome/browser/preferences/PresearchPreferenceKeys.java",
  "../../presearch/android/java/org/chromium/chrome/browser/preferences/website/PresearchShieldsContentSettings.java",
  "../../presearch/android/java/org/chromium/chrome/browser/preferences/website/PresearchShieldsContentSettingsObserver.java",
  "../../presearch/android/java/org/chromium/chrome/browser/privacy/settings/PresearchPrivacySettings.java",
  "../../presearch/android/java/org/chromium/chrome/browser/qrreader/BarcodeTracker.java",
  "../../presearch/android/java/org/chromium/chrome/browser/qrreader/BarcodeTrackerFactory.java",
  "../../presearch/android/java/org/chromium/chrome/browser/qrreader/CameraSource.java",
  "../../presearch/android/java/org/chromium/chrome/browser/qrreader/CameraSourcePreview.java",
  "../../presearch/android/java/org/chromium/chrome/browser/query_tiles/PresearchQueryTileSection.java",
  "../../presearch/android/java/org/chromium/chrome/browser/rate/RateDialogFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/rate/RateFeedbackUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/rate/RateUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/safe_browsing/settings/PresearchStandardProtectionSettingsFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/search_engines/settings/PresearchBaseSearchEngineAdapter.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/AppearancePreferences.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/BackgroundImagesPreferences.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/BackgroundVideoPlaybackPreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchCustomTabsPreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchLicensePreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchLicensePreferences.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchMainPreferencesBase.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchPreferenceFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchPrivateSearchEnginePreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchRewardsPreferences.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchRewardsResetPreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchRewardsResetPreferenceDialog.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchSearchEngineAdapter.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchSearchEnginePreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchSearchEngineUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchSettingsLauncherImpl.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchStandardSearchEnginePreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchStatsPreferences.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchWebrtcPolicyPreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchWebrtcPolicyPreferencesFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/ClosingAllTabsClosesPresearchPreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/SearchEngineTabModelSelectorObserver.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/developer/PresearchQAPreferences.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/developer/PresearchRewardsDebugPreferences.java",
  "../../presearch/android/java/org/chromium/chrome/browser/settings/themes/PresearchRadioButtonGroupCustomHomepageThemePreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/shields/PresearchShieldsHandler.java",
  "../../presearch/android/java/org/chromium/chrome/browser/shields/PresearchShieldsMenuObserver.java",
  "../../presearch/android/java/org/chromium/chrome/browser/shields/PresearchShieldsUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/shields/ShieldsTooltipEnum.java",
  "../../presearch/android/java/org/chromium/chrome/browser/signin/PresearchSigninManager.java",
  "../../presearch/android/java/org/chromium/chrome/browser/site_settings/PresearchSiteSettingsDelegate.java",
  "../../presearch/android/java/org/chromium/chrome/browser/site_settings/DesktopModePreferences.java",
  "../../presearch/android/java/org/chromium/chrome/browser/site_settings/PlayYTVideoInBrowserPreferences.java",
  "../../presearch/android/java/org/chromium/chrome/browser/suggestions/tile/PresearchTileView.java",
  "../../presearch/android/java/org/chromium/chrome/browser/sync/PresearchAndroidSyncSettings.java",
  "../../presearch/android/java/org/chromium/chrome/browser/sync/settings/PresearchManageSyncSettings.java",
  "../../presearch/android/java/org/chromium/chrome/browser/tabmodel/PresearchTabCreator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/PresearchHomeButton.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/PresearchIncognitoToggleTabLayout.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/PresearchToolbarManager.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/BookmarksButton.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomTabSwitcherActionMenuCoordinator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarConfiguration.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarCoordinator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarNewTabButton.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarVariationManager.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/PresearchBottomControlsCoordinator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/PresearchScrollingBottomViewResourceFrameLayout.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarCoordinator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarLinearLayout.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarMediator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarModel.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarViewBinder.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/SearchAccelerator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/ShareButton.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarCoordinator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarMediator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarModel.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarViewBinder.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/menu_button/PresearchMenuButtonCoordinator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/top/PresearchTabSwitcherModeTTCoordinatorPhone.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/top/PresearchTabSwitcherModeTTPhone.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/top/PresearchToolbarLayout.java",
  "../../presearch/android/java/org/chromium/chrome/browser/toolbar/top/PresearchTopToolbarCoordinator.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ui/presearch_tricks/checkbox_to_switch/CheckBoxPreference.java",
  "../../presearch/android/java/org/chromium/chrome/browser/ui/messages/infobar/PresearchSimpleConfirmInfoBarBuilder.java",
  "../../presearch/android/java/org/chromium/chrome/browser/upgrade/PresearchPackageReplacedBroadcastReceiver.java",
  "../../presearch/android/java/org/chromium/chrome/browser/upgrade/PresearchUpgradeJobIntentServiceImpl.java",
  "../../presearch/android/java/org/chromium/chrome/browser/upgrade/NotificationIntent.java",
  "../../presearch/android/java/org/chromium/chrome/browser/util/PresearchDbUtil.java",
  "../../presearch/android/java/org/chromium/chrome/browser/util/PresearchReferrer.java",
  "../../presearch/android/java/org/chromium/chrome/browser/util/ConfigurationUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/util/ImageUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/util/PackageUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/util/TabUtils.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceAccountBalance.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceActivity.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceBuyFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceCoinNetworks.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceConvert.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceConvertFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceDepositFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceNativeWorker.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceObserver.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceSpinnerAdapter.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceSummaryFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceWidgetManager.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/CoinNetworkModel.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/ConvertAsset.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/CryptoWidgetBottomSheetDialogFragment.java",
  "../../presearch/android/java/org/chromium/chrome/browser/widget/crypto/binance/CryptoWidgetTabAdapter.java",
]

if (presearch_rewards_enabled || enable_presearch_referrals) {
  presearch_java_sources += presearch_rewards_java_sources
}

if (presearch_ads_enabled) {
  presearch_java_sources += presearch_ads_java_sources
}

if (enable_presearch_sync) {
  presearch_java_sources += [
    "../../presearch/android/java/org/chromium/chrome/browser/PresearchSyncInformers.java",
    "../../presearch/android/java/org/chromium/chrome/browser/PresearchSyncWorker.java",
    "../../presearch/android/java/org/chromium/chrome/browser/settings/PresearchSyncScreensPreference.java",
    "../../presearch/android/java/org/chromium/chrome/browser/sync/PresearchSyncDevices.java",
  ]
}

presearch_components_browser_ui_site_settings_android_java = [
  "//presearch/components/browser_ui/site_settings/android/java/src/org/chromium/components/browser_ui/site_settings/PresearchSingleCategorySettings.java",
  "//presearch/components/browser_ui/site_settings/android/java/src/org/chromium/components/browser_ui/site_settings/PresearchSiteSettingsPreferencesBase.java",
]

presearch_browser_ui_android_appmenu_internal_sources = [ "//presearch/browser/ui/android/appmenu/internal/java/src/org/chromium/chrome/browser/ui/appmenu/PresearchAppMenu.java" ]

presearch_browser_ui_android_toolbar_sources = [ "//presearch/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/bottom/PresearchBottomControlsMediator.java" ]

presearch_java_base_sources = [
  "//presearch/android/java/org/chromium/base/PresearchCommandLineInitUtil.java",
  "//presearch/android/java/org/chromium/base/PresearchReflectionUtil.java",
]

presearch_java_base_module_sources = [
  "//presearch/android/java/org/chromium/chrome/browser/base/SplitCompatJobIntentService.java",
  "//presearch/android/java/org/chromium/chrome/browser/upgrade/PresearchUpgradeJobIntentService.java",
]

presearch_java_base_module_deps =
    [ "//third_party/androidx:androidx_core_core_java" ]

presearch_android_features_tab_ui_java_sources = [ "//presearch/android/features/tab_ui/java/src/org/chromium/chrome/browser/tasks/tab_management/PresearchTabGroupUiCoordinator.java" ]
